<resources>
    <string name="app_name">Movie Max</string>
    <string name="see_all">See all</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="exit_confirmation">Press again to exit</string>
    <string name="all_movies">Discover Movies</string>
    <string name="all_tv_shows">Discover TV Shows</string>
    <string name="setting">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="language_change_desc">Change your system language</string>
    <string name="language_header">Language</string>
    <string name="language_option">Language Selection</string>
    <string name="poster">poster</string>
    <string name="test_text">Test Text</string>
    <string name="dummy_title">Godzilla vs. Kong</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu arcu vel enim vehicula congue. Phasellus a convallis ante, sit amet mattis nulla. Cras malesuada feugiat lorem id malesuada. In orci est, tristique quis malesuada sit amet, vulputate sed nunc. Donec eget tortor sem. Sed eu pharetra justo, at porttitor lacus. In fringilla suscipit ligula, ac eleifend lorem volutpat quis. Maecenas laoreet, ex nec viverra tempus, lectus nulla fringilla purus, sed venenatis diam arcu at leo.
    </string>
    <string name="playtime_season_title_dummy">PLAYTIME/SEASON</string>
    <string name="dummy_playtime">01:53:00</string>
    <string name="dummy_genre">Action</string>
    <string name="dummy_year">2021</string>
    <string name="dummy_genre_title">GENRE</string>
    <string name="dummy_overview_title">OVERVIEW</string>
    <string name="playtime">PLAYTIME</string>
    <string name="season">SEASON</string>
    <string name="year_of_release">RELEASE DATE</string>
    <string name="share">Share</string>
    <string name="search_hint">Movies, TVs</string>
    <string name="trending">Trending Today</string>
    <string name="search_header">Search</string>
    <string name="minutes">%1$s mins</string>
    <string name="backdrop">Backdrop</string>
    <string name="placeholder_title">Here is a title placeholder</string>
    <string name="search_result_header">Search Result: %1$s</string>
    <string name="query_empty_warning">Query can\'t be empty!</string>
    <string name="search_empty">Nothing found.</string>
    <string name="favorite">Favorites</string>
    <string name="rating">RATING</string>
    <string name="dummy_rating">6.9 / 10</string>
    <string name="cast">CASTS</string>
    <string name="author">djtyranix</string>
    <string name="reviews">REVIEWS</string>
    <string name="no_reviews">No reviews found.</string>
    <string name="theme">Theme</string>
    <string name="dark_mode_summary">Turn on dark mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_isenabled">Dark mode %1$s</string>
    <string name="enabled">enabled</string>
    <string name="disabled">disabled</string>
    <string name="rating_value">%1$s / 10</string>
    <string name="no_cast">No cast information found.</string>
    <string name="fav_add_success">Item successfully added to favorite.</string>
    <string name="fav_del_success">Item successfully removed from favorite.</string>
    <string name="your_favorites">Your Favorites</string>
    <string name="dark_mode_summary_off">Turn off dark mode</string>

    <string-array name="sort_category">
        <item>All</item>
        <item>Movies</item>
        <item>TV Shows</item>
    </string-array>
</resources>