<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/searchFragmentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".views.search.SearchFragment">

    <include
        android:id="@+id/home_toolbar"
        layout="@layout/home_toolbar" />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/rv_search_shimmer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_toolbar"
        app:shimmer_auto_start="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/item_list_search_placeholder" />

            <include layout="@layout/item_list_search_placeholder" />

            <include layout="@layout/item_list_search_placeholder" />

            <include layout="@layout/item_list_search_placeholder" />

            <include layout="@layout/item_list_search_placeholder" />

            <include layout="@layout/item_list_search_placeholder" />
        </LinearLayout>
    </com.facebook.shimmer.ShimmerFrameLayout>

    <!--    IF EMPTY-->
    <ImageView
        android:id="@+id/empty_search_placeholder"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/search_empty"
        android:src="@drawable/ic_movie_black"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.43" />

    <TextView
        android:id="@+id/empty_search_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins"
        android:text="@string/search_empty"
        android:textAlignment="center"
        android:textColor="?attr/text_color_primary"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/empty_search_placeholder"
        app:layout_constraintStart_toStartOf="@+id/empty_search_placeholder"
        app:layout_constraintTop_toBottomOf="@+id/empty_search_placeholder" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_search_result"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_toolbar"
        tools:listitem="@layout/item_list_search" />
</androidx.constraintlayout.widget.ConstraintLayout>